syntax = "proto3";
//定义protobuf的包名称空间
package toycache;

option java_package = "com.t0ugh.sdk.proto";
option java_outer_classname = "DBProto";

message Database {
    uint64 version = 1;
    map<string, ValueObject> data = 2;
    map<string, uint64> expire = 3;
}

message ComparableString {
    string stringValue = 1;
    double score = 2;
}

message ValueObject {
    ValueType valueType = 1;
    string stringValue = 2;
    repeated string setValue = 3;
    repeated string listValue = 4;
    repeated ComparableString sortedSetValue = 5;
    map<string, string> mapValue = 6;
}

enum ValueType {
    ValueTypeInvalid = 0;
    ValueTypeString = 1;
    ValueTypeSet = 2;
    ValueTypeList = 3;
    ValueTypeSortedSet = 4;
    ValueTypeMap = 5;
}